# MementoExperiment

./: .gitignore  Host_Qwen.py  LICENSE  README.md  f1_report.txt  pyproject.toml  requirements.txt  test_api.py
client/: accuracy_report.txt  agent.py  agent_local_server.py  benchmark224.py  no_parametric_cbr.py  parametric_memory.py
memory/: SampleOutput.py  convert_mem.py  dummy_memo.jsonl  memory.jsonl  memory_old.jsonl  np_memory.py  parametric_memory.py  train_memory_retriever.py  training_data.jsonl
searxng-docker/: docker-compose.yaml
searxng-docker/searxng/: settings.yml
server/: ai_crawl.py  code_agent.py  craw_page.py  documents_tool.py  excel_tool.py  image_tool.py  jina_fetch_tool.py  math_tool.py  search_tool.py  serp_search.py  video_tool.py
server/interpreters/: docker_interpreter.py  e2b_interpreter.py  interpreters.py  ipython_interpreter.py
