[project]
name = "memento"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "assemblyai==0.40.2",
    "chunkr-ai>=0.3.7",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "crawl4ai>=0.7.4",
    "docx2markdown==0.1.1",
    "fastmcp==2.7.0",
    "ffmpeg-python>=0.2.0",
    "loguru==0.7.3",
    "openai==1.75.0",
    "opencv-python==4.11.0.86",
    "pandas==2.2.3",
    "python-pptx==1.0.2",
    "retry==0.9.2",
    "scenedetect==0.6.6",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "xmltodict==0.14.2",
    "yt-dlp>=2025.8.27",
]
